fix(invest): fixed the footer link gap

--- a/apps/invest/src/components/footer/Footer.scss
+++ b/apps/invest/src/components/footer/Footer.scss
@@ -1,5 +1,6 @@
 /** @format */
 @import '@arcane-web/alchemy/lib/base/breakpoint';
+@import '@arcane-web/alchemy/lib/base/space';
 
 footer {
   background-color: var(--footer-background);
@@ -13,6 +14,10 @@ footer {
 
 #footer-logo {
   fill: var(--footer-color);
+}
+
+.footer-text {
+  padding-bottom: $space-16;
 }
 
 .footer-link {
